fluxcd/infrastructure/configs/overlays/production/istio-policies/hyrule-castle/allow-calcom-to-calcom-postgres.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-calcom-to-calcom-postgres
spec:
  selector:
    matchLabels:
      cnpg.io/cluster: calcom-postgres
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/hyrule-castle/sa/calcom
      to:
        - operation:
            ports: ["5432"]
